--- a/Olist-Project.ipynb
+++ b/Olist-Project.ipynb
@@ -70,6 +70,14 @@
     "# kaggle_api.dataset_download_files('olistbr/brazilian-ecommerce',  unzip=True) # This is commented out after it is run because re-running it will re-pull the data from Kaggle using bandwith and CPU resources unnecessarily\n",
     "\n",
     "df_olist_customers = pd.read_csv('olist_customers_dataset.csv') \n",
+    "df_olist_geolocation = pd.read_csv('olist_geolocation_dataset.csv') \n",
+    "df_olist_order_items = pd.read_csv('olist_order_items_dataset.csv') \n",
+    "df_olist_order_payments = pd.read_csv('olist_order_payments_dataset.csv') \n",
+    "df_olist_order_reviews = pd.read_csv('olist_order_reviews_dataset.csv') \n",
+    "df_olist_orders = pd.read_csv('olist_orders_dataset.csv') \n",
+    "df_olist_sellers = pd.read_csv('olist_sellers_dataset.csv') \n",
+    "df_olist_translation = pd.read_csv('product_category_name_translation.csv') \n",
+    "\n",
     "print(df_olist_customers.head(10))"
    ]
   }
